--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.9",
     "axios": "^1.4.0",
+    "country-list": "^2.3.0",
     "dotenv": "^16.1.4",
+    "opencage-api-client": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.1",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
